# invariant

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
invariant/: __init__.py  constants.py  exceptions.py  invariant.py
invariant/tests/: test_invariant.py
tests/: test_invariant.py
